<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        card_view:cardElevation="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/cv">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="8dp">

                <TextView
                    android:textColor="#0d638f"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"
                    android:id="@+id/name_project"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Task Name" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#FFE0E0E0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_create_at"
                        android:text="Project Name"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Priority"
                        android:id="@+id/txt_type"
                        android:layout_below="@+id/txt_create_at"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/create_at"
                        android:id="@+id/textView9"
                        android:layout_alignTop="@+id/txt_create_at"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/type"
                        android:id="@+id/textView10"
                        android:layout_below="@+id/textView9"
                        android:layout_alignLeft="@+id/textView9"
                        android:layout_alignStart="@+id/textView9" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="txt"
                        android:id="@+id/txt_create_by"
                        android:layout_gravity="center_vertical"
                        android:layout_below="@+id/txt_status"
                        android:layout_alignParentRight="true"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Status"

                        android:layout_gravity="center_vertical"
                        android:id="@+id/txt_status"
                        android:layout_below="@+id/txt_type"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/status"
                        android:id="@+id/textView12"
                        android:layout_alignBottom="@+id/txt_status"
                        android:layout_alignLeft="@+id/textView10"
                        android:layout_alignStart="@+id/textView10" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/create_by"
                        android:id="@+id/textView13"
                        android:layout_below="@+id/textView12"
                        android:layout_alignLeft="@+id/textView10"
                        android:layout_alignStart="@+id/textView10" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>
